# Projekt_Haarglatzfall

./: .bat  Aufgabenverteilung.txt  Batch-Output-Infos (Max Engelhardt).txt  CMakeLists.txt  Commando.json  MinGW.bat  MinGW.bat.bat  README.md  Test 1.bat  Test.json  Test2.json  Test2copy.json  jsonFileSearch.cpp  jsonSearch  main  main.cpp  test  test.cpp  test2.cpp  testJSON.cpp  testjson  testo.bat
BatchOutput/: CreateBatch  CreateBatch.cpp  Test 1.bat  mybatchfile.bat
DHBW Studium Privat - Kopie (2)/: Untitled.canvas
DHBW Studium Privat - Kopie (2)/.obsidian/: appearance.json  community-plugins.json  graph.json  workspace.json
DHBW Studium Privat - Kopie (2)/.obsidian/plugins/codeblock-customizer/: data.json
DHBW Studium Privat - Kopie (2)/.obsidian/plugins/obsidian-completr/: blacklisted_suggestions.txt  scanned_words.txt
DHBW Studium Privat - Kopie (2)/Bilder/: Untitled.canvas
DHBW Studium Privat - Kopie (2)/Semester/1. Semester/Module/DV - Datenverarbeitung/: Aufgaben.md
DHBW Studium Privat - Kopie (2)/Semester/1. Semester/Module/Grundlagen Ethik und Recht/: Literatur.md  Skripte.md  Videoüberwachung im öffentlichen Raum durch KI - (Biometrische Viedoüberwachung).md  Vorbereitung für die Hausarbeit.md  Ziel.md
DHBW Studium Privat - Kopie (2)/Semester/2. Semester/Digitale Bildverarbeitung/: Faltung.md  Fourier Transformation.md
DHBW Studium Privat - Kopie (2)/Semester/2. Semester/Digitale Sprachverarbeitung/: 1.1 Digitale Sprachverarbeitung.md  1.2 Grundlegendes zur Linguistik.md  1.3 Menschliche Sprachproduktion.md  1.4 Menschliches Hören.md
header/: command.h  createBatch.h  jsonClass.h  jsonFinder.h
src/: CreateBatch.cpp  command.cpp  jsonClass.cpp  jsonFinder.cpp  main  main.cpp  test
(+246 files in other folders)
